<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_details"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_userimage"
        android:layout_width="64dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/list_view_image"
        app:srcCompat="@android:drawable/checkbox_on_background" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/iv_userimage"
android:layout_marginStart="10dp"
        android:text="@string/lv_name"
        android:textAlignment="center"
       android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/iv_userimage"
        android:layout_below="@id/tv_name"
       android:layout_marginStart="10dp"
        android:text="@string/lv_phone"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignBaseline="@id/iv_userimage"/>
</RelativeLayout>